--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
-    <meta content="Rect extension for text editor." name="description">
-    <title>Text Editor Rect 2.0.0</title>
+    <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
+    <title>Text Editor Rect 2.1.0</title>
     <style>
       * {
         box-sizing: border-box;
@@ -61,9 +61,10 @@
   </head>
   <body>
     <header>
-      <h1>Text Editor Rect 2.0.0</h1>
+      <h1>Text Editor Rect 2.1.0</h1>
       <p>Rect extension for <a href="../text-editor/index.html">text editor</a>.</p>
       <hr>
+      <p>Provides a feature to get cursor position and selection dimension in pixels.</p>
     </header>
     <main>
       <p><textarea spellcheck="false">abcdef</textarea></p>
@@ -73,37 +74,34 @@
       <pre><code>&lt;script src="<a href="../text-editor/index.min.js" target="_blank">./text-editor/index.min.js</a>"&gt;&lt;/script&gt;
 &lt;script src="<a href="index.min.js" target="_blank">./text-editor.rect/index.min.js</a>"&gt;&lt;/script&gt;
 &lt;script&gt;
-TE.mirror = TE.Rect.mirror;
-TE.prototype.rect = TE.Rect.rect;
+Object.assign(TE.prototype, TE.Rect.that);
 &lt;/script&gt;</code></pre>
       <h4>CommonJS</h4>
       <pre><code>const TE = require('@taufik-nurrohman/text-editor');
-const {mirror, rect} = require('@taufik-nurrohman/text-editor.rect');
+const {that} = require('@taufik-nurrohman/text-editor.rect');
 
-TE.mirror = mirror;
-TE.prototype.rect = rect;</code></pre>
+Object.assign(TE.prototype, that);</code></pre>
       <h4>ECMAScript</h4>
       <pre><code>import TE from '@taufik-nurrohman/text-editor';
-import {mirror, rect} from '@taufik-nurrohman/text-editor.rect';
+import {that} from '@taufik-nurrohman/text-editor.rect';
 
-TE.mirror = mirror;
-TE.prototype.rect = rect;</code></pre>
+Object.assign(TE.prototype, that);</code></pre>
       <h2>Examples</h2>
       <ul>
         <li><a href="tweak/caret.html" target="_blank">Custom Caret Example</a></li>
         <li><a href="tweak/tools.html" target="_blank">Floating Tools Example</a></li>
       </ul>
       <h2>Methods and Properties</h2>
-      <h3>TE.mirror</h3>
-      <p>Return a <code>&lt;div&gt;</code> element to mirror the <code>&lt;textarea&gt;</code>.</p>
+      <h3>editor.mirror</h3>
+      <p>Return a <code>&lt;div&gt;</code> element that mirrors the <code>&lt;textarea&gt;</code> element.</p>
       <h3>editor.rect(key)</h3>
       <p>Get current selection offset and dimension data.</p>
       <pre><code>// [&lt;selection start&gt;, &lt;selection end&gt;, &lt;selection as rectangle&gt;, &lt;the editor&gt;]
 
-// x: left
-// y: top
+// h: height
 // w: width
-// h: height</code></pre>
+// x: left
+// y: top</code></pre>
     </main>
     <footer>
       <hr>
@@ -112,8 +110,7 @@ TE.prototype.rect = rect;</code></pre>
     <script src="../text-editor/index.min.js"></script>
     <script src="index.min.js"></script>
     <script>
-      TE.mirror = TE.Rect.mirror;
-      TE.prototype.rect = TE.Rect.rect;
+      Object.assign(TE.prototype, TE.Rect.that);
 
       const editor = new TE(document.querySelector('textarea'));
     </script>
