--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Text Editor Rect 2.1.2</title>
+    <title>Text Editor Rect 2.1.3</title>
     <style>
       * {
         box-sizing: border-box;
@@ -61,7 +61,7 @@
   </head>
   <body>
     <header>
-      <h1>Text Editor Rect 2.1.2</h1>
+      <h1>Text Editor Rect 2.1.3</h1>
       <p>Rect extension for <a href="../text-editor/index.html">text editor</a>.</p>
       <hr>
       <p>Provides a feature to get cursor position and selection dimension in pixels.</p>
@@ -83,7 +83,7 @@ const {that: thatRect} = require('@taufik-nurrohman/text-editor.rect');
 Object.assign(TE.prototype, thatRect);</code></pre>
       <h4>ECMAScript</h4>
       <pre><code>import TE from '@taufik-nurrohman/text-editor';
-import {that: thatRect} from '@taufik-nurrohman/text-editor.rect';
+import {that as thatRect} from '@taufik-nurrohman/text-editor.rect';
 
 Object.assign(TE.prototype, thatRect);</code></pre>
       <h2>Examples</h2>
