--- a/tweak/caret.html
+++ b/tweak/caret.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Caret · Text Editor Rect 2.1.5</title>
+    <title>Text Editor Rect</title>
   </head>
   <body>
     <main>
