--- a/tweak/tools.html
+++ b/tweak/tools.html
@@ -42,7 +42,6 @@ d</textarea></p>
     <script src="../index.min.js"></script>
     <script>
       Object.assign(TE.prototype, TE.Rect.that);
-
       const editor = new TE(document.querySelector('textarea'));
       const blocks = document.querySelector('.tools-block');
       const lines = document.querySelector('.tools-line');
@@ -65,11 +64,7 @@ d</textarea></p>
                   lines.style.display = 'block';
                   lines.style.left = (rect[0].x - this.scrollLeft) + 'px';
                   lines.style.top = (rect[0].y - this.scrollTop) + 'px';
-              } else if (!value && (
-                      !after ||
-                      !before ||
-                      '\n' === after.slice(0, 1) && '\n' === before.slice(-1)
-                  ) || null === editor.get()) {
+              } else if (!value && (!after || !before || '\n' === after.slice(0, 1) && '\n' === before.slice(-1)) || null === editor.get()) {
                   let rect = editor.rect();
                   blocks.style.display = 'block';
                   blocks.style.left = (rect[0].x - this.scrollLeft) + 'px';
@@ -77,11 +72,9 @@ d</textarea></p>
               }
           }, 1);
       }
-
       editor.self.addEventListener('keydown', showTools, false);
       editor.self.addEventListener('mouseup', showTools, false);
       editor.self.addEventListener('touchend', showTools, false);
-
       blocks.addEventListener('click', hideTools, false);
       lines.addEventListener('click', hideTools, false);
     </script>
