--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Text Editor Rect 2.1.11</title>
+    <title>Text Editor Rect 2.1.12</title>
     <style>
       * {
         box-sizing: border-box;
@@ -61,7 +61,7 @@
   </head>
   <body>
     <header>
-      <h1>Text Editor Rect 2.1.11</h1>
+      <h1>Text Editor Rect 2.1.12</h1>
       <p>Rect extension for <a href="../text-editor/index.html">text editor</a>.</p>
       <hr>
       <p>Provides a feature to get cursor position and selection dimension in pixels.</p>
@@ -77,8 +77,8 @@
   Object.assign(TE.prototype, TE.Rect.that);
 &lt;/script&gt;</code></pre>
       <h4>CommonJS</h4>
-      <pre><code>const TE = require('@taufik-nurrohman/text-editor');
-const {that: thatRect} = require('@taufik-nurrohman/text-editor.rect');
+      <pre><code>const TE = require('@taufik-nurrohman/text-editor').default;
+const {that: thatRect} = require('@taufik-nurrohman/text-editor.rect').default;
 
 Object.assign(TE.prototype, thatRect);</code></pre>
       <h4>ECMAScript</h4>
@@ -105,7 +105,7 @@ Object.assign(TE.prototype, thatRect);</code></pre>
     </main>
     <footer>
       <hr>
-      <p>&copy; 2021 <a href="/">Taufik Nurrohman</a></p>
+      <p>&copy; 2022 <a href="/">Taufik Nurrohman</a></p>
     </footer>
     <script src="../text-editor/index.min.js"></script>
     <script src="index.min.js"></script>
