--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Text Editor Rect 3.0.0</title>
+    <title>Text Editor Rect 4.0.0</title>
     <style>
       * {
         box-sizing: border-box;
       }
       :root {
         background: #fff;
-        color: #000;
         border-top: 4px solid;
+        color: #000;
         font: normal normal 16px/1.25 serif;
       }
       a {
@@ -31,13 +31,13 @@
       header,
       main,
       nav {
-        max-width: 700px;
         margin: 0 auto;
+        max-width: 700px;
       }
       hr {
         border: 0;
-        color: inherit;
         border-top: 1px dashed;
+        color: inherit;
         height: 0;
       }
       pre {
@@ -45,8 +45,8 @@
         word-wrap: break-word;
       }
       pre code {
-        display: block;
         background: #eee;
+        display: block;
         padding: 1em;
       }
       table {
@@ -61,7 +61,7 @@
   </head>
   <body>
     <header>
-      <h1>Text Editor Rect 3.0.0</h1>
+      <h1>Text Editor Rect 4.0.0</h1>
       <p>Rect extension for <a href="../text-editor/index.html">text editor</a>.</p>
       <hr>
       <p>Provides a feature to get cursor position and selection dimension in pixels.</p>
@@ -74,26 +74,28 @@
       <pre><code>&lt;script src="<a href="../text-editor/index.min.js" target="_blank">./text-editor/index.min.js</a>"&gt;&lt;/script&gt;
 &lt;script src="<a href="index.min.js" target="_blank">./text-editor.rect/index.min.js</a>"&gt;&lt;/script&gt;
 &lt;script&gt;
-  let editor = new TE(document.querySelector('textarea'));
+  const editor = new TextEditor(document.querySelector('textarea'), {
+      with: [TextEditor.Rect]
+  });
 &lt;/script&gt;</code></pre>
       <h4>CommonJS</h4>
-      <pre><code>const TE = require('@taufik-nurrohman/text-editor').default;
-const {rect} = require('@taufik-nurrohman/text-editor.rect');
+      <pre><code>const TextEditor = require('@taufik-nurrohman/text-editor').default;
+const Rect = require('@taufik-nurrohman/text-editor.rect').default;
 
-TE.state.with.push(rect); // Load as a core extension
+TextEditor.state.with.push(Rect); // Load as a core extension
 
-let editor = new TE(document.querySelector('textarea'), {
-        with: [rect] // Load as an optional extension
-    });</code></pre>
+const editor = new TextEditor(document.querySelector('textarea'), {
+    with: [Rect] // Load as an optional extension
+});</code></pre>
       <h4>ECMAScript</h4>
-      <pre><code>import TE from '@taufik-nurrohman/text-editor';
-import {rect} from '@taufik-nurrohman/text-editor.rect';
+      <pre><code>import TextEditor from '@taufik-nurrohman/text-editor';
+import Rect from '@taufik-nurrohman/text-editor.rect';
 
-TE.state.with.push(rect); // Load as a core extension
+TextEditor.state.with.push(Rect); // Load as a core extension
 
-let editor = new TE(document.querySelector('textarea'), {
-        with: [rect] // Load as an optional extension
-    });</code></pre>
+const editor = new TextEditor(document.querySelector('textarea'), {
+    with: [Rect] // Load as an optional extension
+});</code></pre>
       <h2>Examples</h2>
       <ul>
         <li><a href="tweak/caret.html" target="_blank">Custom Caret Example</a></li>
@@ -118,7 +120,9 @@ let editor = new TE(document.querySelector('textarea'), {
     <script src="../text-editor/index.min.js"></script>
     <script src="index.min.js"></script>
     <script>
-      const editor = new TE(document.querySelector('textarea'));
+      const editor = new TextEditor(document.querySelector('textarea'), {
+          with: [TextEditor.Rect]
+      });
     </script>
   </body>
 </html>
