--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta content="#000" name="theme-color">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Text Editor: Rect 4.0.1</title>
+    <title>Rect 4.0.1</title>
     <link href="../layout/index.min.css" rel="stylesheet">
     <style>
-      :root {
-        border-top: 5px solid #00f;
-      }
-
       @media (min-width: 45rem) {
         :root {
           padding-bottom: 3rem;
@@ -27,8 +23,8 @@
   </head>
   <body>
     <header>
-      <h1>Text Editor: Rect 4.0.1</h1>
-      <p>Rect extension for <a href="../text-editor/index.html">text editor</a>.</p>
+      <h1>Rect 4.0.1</h1>
+      <p>Rect extension for <a href="../text-editor/index.html">Text Editor</a>.</p>
       <hr>
       <p>Provides a feature to get cursor position and selection dimension in pixels.</p>
     </header>
