--- a/index.html
+++ b/index.html
@@ -5,31 +5,22 @@
     <meta content="#000" name="theme-color">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Rect 4.0.1</title>
+    <title>Text Editor Rect 4.0.1</title>
     <link href="../layout/index.min.css" rel="stylesheet">
     <style>
-      @media (min-width: 45rem) {
-        :root {
-          padding-bottom: 3rem;
-          padding-top: 3rem;
-        }
-        body > * {
-          margin-left: auto;
-          margin-right: auto;
-          max-width: 45rem;
-        }
+      #out:empty {
+        display: none;
       }
     </style>
   </head>
   <body>
     <header>
-      <h1>Rect 4.0.1</h1>
-      <p>Rect extension for <a href="../text-editor/index.html">Text Editor</a>.</p>
+      <h1><a href="../text-editor/index.html">&laquo;</a> Text Editor Rect 4.0.1</h1>
+      <p>Rect extension for <a href="../text-editor/index.html">Text Editor</a>. This extension provides a feature to get cursor position and selection dimension in pixels.</p>
       <hr>
-      <p>Provides a feature to get cursor position and selection dimension in pixels.</p>
     </header>
     <main>
-      <p><textarea id="in" placeholder="Type something&hellip;" spellcheck="false" style="display:block;width:100%;">abcdef</textarea></p>
+      <p><textarea id="in" placeholder="Content goes here&hellip;" spellcheck="false" style="display:block;width:100%;">abcdef</textarea></p>
       <p role="group"><button onclick="document.querySelector('#out').textContent = JSON.stringify(editor.rect(), null, 2);">Inspect</button></p>
       <pre id="out"></pre>
       <h2>Usage</h2>
@@ -61,20 +52,18 @@ const editor = new TextEditor(document.querySelector('textarea'), {
 });</code></pre>
       <h2>Examples</h2>
       <ul>
-        <li><a href="tweak/caret.html" target="_blank">Custom Caret Example</a></li>
-        <li><a href="tweak/tools.html" target="_blank">Floating Tools Example</a></li>
+        <li><a href="tweak/caret.html" target="_blank">Custom Caret</a></li>
+        <li><a href="tweak/tools.html" target="_blank">Floating Tools</a></li>
       </ul>
-      <h2>Methods and Properties</h2>
-      <h3><code>editor.mirror</code></h3>
-      <p>Return a <code>&lt;div&gt;</code> element that mirrors the <code>&lt;textarea&gt;</code> element.</p>
-      <h3><code>editor.rect(key)</code></h3>
+      <h2>Methods</h2>
+      <h3>Instance Methods</h3>
+      <h4><code>editor.rect(key)</code></h4>
       <p>Get current selection offset and dimension data.</p>
-      <pre><code>// [&lt;selection start&gt;, &lt;selection end&gt;, &lt;selection as rectangle&gt;, &lt;the editor&gt;]
-
-// h: height
-// w: width
-// x: left
-// y: top</code></pre>
+      <pre><code>console.log(editor.rect()); // [start, end, selection, editor]</code></pre>
+      <h2>Properties</h2>
+      <h3>Instance Properties</h3>
+      <h4><code>editor.mirror</code></h4>
+      <p>Return a <code>&lt;div&gt;</code> element that mirrors the <code>&lt;textarea&gt;</code> element.</p>
     </main>
     <footer>
       <hr>
