--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta content="#000" name="theme-color">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Text Editor Rect 4.0.4</title>
+    <title>Text Editor Rect 4.0.5</title>
     <link href="../layout/index.min.css" rel="stylesheet">
     <style>
       body {
         margin-left: auto;
         margin-right: auto;
         max-width: 60rem;
+      }
+      #out {
+        font-family: monospace;
       }
       #out:empty {
         display: none;
@@ -21,7 +24,7 @@
   <body>
     <header>
       <hgroup>
-        <h1><a href="../text-editor/index.html">&laquo;</a> Text Editor Rect 4.0.4</h1>
+        <h1><a href="../text-editor/index.html">&laquo;</a> Text Editor Rect 4.0.5</h1>
         <p>This extension provides a feature to get cursor position and selection dimension in pixels.</p>
       </hgroup>
     </header>
