--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="#000" name="theme-color">
     <meta content="width=device-width" name="viewport">
     <meta content="Provides a feature to get cursor position and selection dimension in pixels." name="description">
-    <title>Text Editor Rect 4.0.5</title>
+    <title>Text Editor Rect 4.0.6</title>
     <link href="../layout/index.min.css" rel="stylesheet">
     <style>
       body {
@@ -24,7 +24,7 @@
   <body>
     <header>
       <hgroup>
-        <h1><a href="../text-editor/index.html">&laquo;</a> Text Editor Rect 4.0.5</h1>
+        <h1><a href="../text-editor/index.html">&laquo;</a> Text Editor Rect 4.0.6</h1>
         <p>This extension provides a feature to get cursor position and selection dimension in pixels.</p>
       </hgroup>
     </header>
@@ -67,12 +67,12 @@ const editor = new TextEditor(document.querySelector('textarea'), {
       <h2 id="methods"><a href="#methods">#</a> Methods</h2>
       <h3>Instance Methods</h3>
       <h4><code>editor.rect(key)</code></h4>
-      <p>Get current selection offset and dimension data.</p>
+      <p>Gets current selection offset and dimension data.</p>
       <pre><code>console.log(editor.rect()); // [start, end, selection, editor]</code></pre>
       <h2 id="properties"><a href="#properties">#</a> Properties</h2>
       <h3>Instance Properties</h3>
       <h4><code>editor.mirror</code></h4>
-      <p>Return a <code>&lt;div&gt;</code> element that mirrors the <code>&lt;textarea&gt;</code> element.</p>
+      <p>Returns the <code>&lt;div&gt;</code> element that mirrors the <code>&lt;textarea&gt;</code> element.</p>
     </main>
     <footer>
       <hr>
